force-app/main/default/objects/Goal__c/fields/Achieved__c.field-meta.xml
<CustomField>
    <fullName>Achieved__c</fullName>
    <formula>IF(Goal_Amount__c&gt;0,New_Closed__c / Goal_Amount__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Achieved</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>