force-app/main/default/objects/Goal__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <formula>Programc__r.Department__r.Name</formula>
    <label>Department</label>
    <type>Text</type>
</CustomField>