force-app/main/default/objects/Goal__c/fields/Goal_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Goal_End_Date__c</fullName>
    <formula>DATEVALUE(TEXT(Year__c) + IF( ISPICKVAL(Quarter__c , &apos;Q1&apos;) 
    ,&apos;-03-31&apos;,
	IF(ISPICKVAL( Quarter__c , &apos;Q2&apos;),
	&apos;-06-30&apos;,
		IF(ISPICKVAL( Quarter__c , &apos;Q3&apos;),
		&apos;-09-30&apos;,
			IF(ISPICKVAL( Quarter__c , &apos;Q4&apos;),&apos;-12-31&apos;,&apos;-01-01&apos;)
		)
	)
))</formula>
    <label>Goal End Date</label>
    <type>Date</type>
</CustomField>