force-app/main/default/objects/Goal__c/fields/Goal_Name__c.field-meta.xml
<CustomField>
    <fullName>Goal_Name__c</fullName>
    <formula>IF(RecordType.Name = &apos;Program Goal&apos;,Programc__r.Name +&apos;-&apos;+ TEXT(Year__c)+&apos;-&apos;+ TEXT(Quarter__c),User__r.FirstName +&apos; &apos;+ User__r.LastName+&apos;-&apos;+Programc__r.Name +&apos;-&apos;+ TEXT(Year__c)+&apos;-&apos;+ TEXT(Quarter__c))</formula>
    <label>Goal Name</label>
    <type>Text</type>
</CustomField>