force-app/main/default/objects/Goal__c/fields/New_Pipeline__c.field-meta.xml
<CustomField>
    <fullName>New_Pipeline__c</fullName>
    <defaultValue>0</defaultValue>
    <label>New Pipeline</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>