force-app/main/default/objects/Goal__c/fields/Parent_Program__c.field-meta.xml
<CustomField>
    <fullName>Parent_Program__c</fullName>
    <formula>Programc__r.Parent_Program__r.Name</formula>
    <label>Parent Program</label>
    <type>Text</type>
</CustomField>