force-app/main/default/objects/Goal__c/fields/Program_Goal__c.field-meta.xml
<CustomField>
    <fullName>Program_Goal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program Goal</label>
    <referenceTo>Goal__c</referenceTo>
    <relationshipLabel>User Goals</relationshipLabel>
    <relationshipName>Goals</relationshipName>
    <type>Lookup</type>
</CustomField>