force-app/main/default/objects/Goal__c/fields/Program_Goal_Amount__c.field-meta.xml
<CustomField>
    <fullName>Program_Goal_Amount__c</fullName>
    <formula>Program_Goal__r.Goal_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program Goal Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>