force-app/main/default/objects/Goal__c/fields/Record_Type_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Id__c</fullName>
    <label>Record Type Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>