force-app/main/default/objects/Goal__c/fields/Renewal_Closed_Lost__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Closed_Lost__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Renewal Closed Lost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>