force-app/main/default/objects/Goal__c/fields/User_Goal_Amount__c.field-meta.xml
<CustomField>
    <fullName>User_Goal_Amount__c</fullName>
    <formula>IF( RecordType.DeveloperName = &apos;User_Goal&apos;, Goal_Amount__c ,0)</formula>
    <label>User Goal Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>