force-app/main/default/objects/Goal__c/fields/User_Goal_Name__c.field-meta.xml
<CustomField>
    <fullName>User_Goal_Name__c</fullName>
    <formula>User__r.FirstName +&apos; &apos;+ User__r.LastName+&apos;-&apos;+Programc__r.Name +&apos;-&apos;+ TEXT(Year__c)+&apos;-&apos;+ TEXT(Quarter__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Goal Name</label>
    <type>Text</type>
</CustomField>