force-app/main/default/objects/Goal__c/fields/User_Or_Program_Id__c.field-meta.xml
<CustomField>
    <fullName>User_Or_Program_Id__c</fullName>
    <description>This field use in duplicate rule</description>
    <label>User Or Program Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>