force-app/main/default/objects/Goal__c/recordTypes/Program_Goal.recordType-meta.xml
<RecordType>
    <fullName>Program_Goal</fullName>
    <active>true</active>
    <label>Program Goal</label>
</RecordType>