force-app/main/default/objects/Goal__c/recordTypes/User_Goal.recordType-meta.xml
<RecordType>
    <fullName>User_Goal</fullName>
    <active>true</active>
    <label>User Goal</label>
</RecordType>