force-app/main/default/objects/Goal__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Programc__c</columns>
    <columns>User__c</columns>
    <columns>Year__c</columns>
    <columns>Quarter__c</columns>
    <columns>New_Pipeline__c</columns>
    <columns>New_Closed__c</columns>
    <columns>Renewal_Pipeline__c</columns>
    <columns>New_Closed_Lost__c</columns>
    <columns>Renewal_Closed__c</columns>
    <columns>Renewal_Closed_Lost__c</columns>
    <columns>Achieved__c</columns>
    <columns>Goal_Amount__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>