force-app/main/default/objects/Goal__c/listViews/Current_Year_ECS_Goals.listView-meta.xml
<ListView>
    <fullName>Current_Year_ECS_Goals</fullName>
    <columns>NAME</columns>
    <columns>Year__c</columns>
    <columns>Quarter__c</columns>
    <columns>Division__c</columns>
    <columns>Department__c</columns>
    <columns>Programc__c</columns>
    <columns>Goal_Amount__c</columns>
    <columns>New_Closed__c</columns>
    <columns>New_Pipeline__c</columns>
    <columns>New_Closed_Lost__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Goal__c.Program_Goal</value>
    </filters>
    <filters>
        <field>Year__c</field>
        <operation>equals</operation>
        <value>2023</value>
    </filters>
    <filters>
        <field>Division__c</field>
        <operation>equals</operation>
        <value>ECS</value>
    </filters>
    <label>Current Year ECS Goals</label>
</ListView>