force-app/main/default/objects/Goal__c/listViews/Program_Goal_2021.listView-meta.xml
<ListView>
    <fullName>Program_Goal_2021</fullName>
    <columns>NAME</columns>
    <columns>Year__c</columns>
    <columns>Quarter__c</columns>
    <columns>Programc__c</columns>
    <columns>Goal_Amount__c</columns>
    <columns>New_Closed__c</columns>
    <columns>New_Pipeline__c</columns>
    <columns>New_Closed_Lost__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Goal__c.Program_Goal</value>
    </filters>
    <filters>
        <field>Year__c</field>
        <operation>equals</operation>
        <value>2021</value>
    </filters>
    <label>Program Goal 2021</label>
</ListView>